Fixed header on mobile, added new animation to header links

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -195,19 +195,104 @@ button {
         height: 40px;
         margin-left: 10px;
         cursor: pointer;
+
+        &:hover {
+          animation: heartbeat 1.5s ease-in-out infinite both;
+
+          /* ----------------------------------------------
+ * Generated by Animista on 2023-12-28 19:4:48
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+          /**
+ * ----------------------------------------
+ * animation heartbeat
+ * ----------------------------------------
+ */
+          @-webkit-keyframes heartbeat {
+            from {
+              -webkit-transform: scale(1);
+              transform: scale(1);
+              -webkit-transform-origin: center center;
+              transform-origin: center center;
+              -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+            }
+            10% {
+              -webkit-transform: scale(0.91);
+              transform: scale(0.91);
+              -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+            }
+            17% {
+              -webkit-transform: scale(0.98);
+              transform: scale(0.98);
+              -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+            }
+            33% {
+              -webkit-transform: scale(0.87);
+              transform: scale(0.87);
+              -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+            }
+            45% {
+              -webkit-transform: scale(1);
+              transform: scale(1);
+              -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+            }
+          }
+          @keyframes heartbeat {
+            from {
+              -webkit-transform: scale(1);
+              transform: scale(1);
+              -webkit-transform-origin: center center;
+              transform-origin: center center;
+              -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+            }
+            10% {
+              -webkit-transform: scale(0.91);
+              transform: scale(0.91);
+              -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+            }
+            17% {
+              -webkit-transform: scale(0.98);
+              transform: scale(0.98);
+              -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+            }
+            33% {
+              -webkit-transform: scale(0.87);
+              transform: scale(0.87);
+              -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+            }
+            45% {
+              -webkit-transform: scale(1);
+              transform: scale(1);
+              -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+            }
+          }
+        }
       }
 
       .content {
         padding: 40px 0 40px 0;
 
+        svg {
+          fill: var(--text-color);
+        }
+
         .links {
           display: flex;
           justify-content: end;
           align-items: center;
-
-          svg {
-            fill: var(--text-color);
-          }
         }
 
         .header-name {
@@ -604,17 +689,6 @@ button {
 }
 
 @media (min-width: 500px) {
-  .header {
-    .links {
-      display: block;
-    }
-
-    .hamburger,
-    .sidebar {
-      display: none;
-    }
-  }
-
   .projects {
     .project-container {
       .project {
@@ -643,11 +717,32 @@ button {
   }
 }
 
-@media (max-width: 500px) {
+@media (min-width: 520px) {
+  .header {
+    .links {
+      display: block;
+    }
+
+    .hamburger,
+    .sidebar {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 520px) {
   .header {
     .content {
       .links {
         display: none;
+
+        svg {
+          display: none;
+        }
+
+        .themes {
+          display: none;
+        }
 
         img {
           display: none;
@@ -657,6 +752,10 @@ button {
           margin-bottom: 10px;
         }
       }
+    }
+
+    .hamburger {
+      display: block;
     }
 
     .sidebar {
